--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "^14.2.15",
     "google": "^2.1.0",
     "next": "15.1.6",
+    "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
